Harden diplomacy packet decoding